--- a/frontend/testReact/menuitek/src/styles/index.css
+++ b/frontend/testReact/menuitek/src/styles/index.css
@@ -9,8 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  @apply bg-beige-main;
-  @apply text-grey-custom;
+  @apply bg-grey-main;
+  @apply text-beige-main;
 }
 
 code {
